@@ -1,3 +1,6 @@
+* Fri Jun 8 2018 Yoshihiro Tanaka (yoshi) 6.10.0
+- Add literal memory usage stat
+
 * Tue May 15 2018 Anthony Molinaro (djnym) 6.9.4
 - have version in .app.src come from ChangeLog
 
